fixed: fetch product by id, button overlap

--- a/frontend/src/Components/ProductCell.module.css
+++ b/frontend/src/Components/ProductCell.module.css
@@ -47,7 +47,7 @@
     color: #333;
 }
 
-.productPrice {
+.productDetail {
     padding-left: 10px;
     font-size: 14px;
     color: #666;
